--- a/contributors.html
+++ b/contributors.html
@@ -99,7 +99,7 @@
       <table width="600px" height="30px" cellspacing="0" cellpadding="0" style="background: #de1059;" class="percent_width contributor">
         <tr>
           <td style="height: 30px; width: 217px;" class="outer_space"></td>
-          <td style="height: 30px; width: 166px; background-color: #473750; color: white; text-align: center; font-family: Arial, sans-serif; font-size: 13px;" class="content">FOR CONTRIBUTORS</td>
+          <td style="height: 30px; width: 166px; background-color: #473750; color: white; text-align: center; font-family: Arial, sans-serif; font-size: 0.8125em;" class="content">FOR CONTRIBUTORS</td>
           <td style="height: 30px; width: 217px;" class="outer_space"></td>
         </tr>
       </table>
@@ -107,7 +107,7 @@
   </tr>
   <!-- tag line -->
   <tr>
-    <td class="percent_width tag_line" style="height: 80px; width: 600px; color: white; text-align: center; font-family: Verdana, Helvetica, sans-serif; font-size: 35px;">How we get you noticed</td>
+    <td class="percent_width tag_line" style="height: 80px; width: 600px; color: white; text-align: center; font-family: Verdana, Helvetica, sans-serif; font-size: 2em;">How we get you noticed</td>
   </tr>
   <tr>
     <td style="width: 600px; height: 20px;" class="percent_width"></td>
@@ -130,7 +130,7 @@
       <table width="600px" height="100px" cellspacing="0" cellpadding="0" class="percent_width sub_text">
         <tr>
           <td style="height: 100px; width: 85px;" class="outer_space"></td>
-          <td style="height: 100px; width: 430px; color: white; text-align: center; font-family: Verdana, Helvetica, sans-serif; font-size: 15px;" class="content">For contributors we make it very easy for you to share your voice with the community. All you have to do is...</td>
+          <td style="height: 100px; width: 430px; color: white; text-align: center; font-family: Verdana, Helvetica, sans-serif; font-size: 0.9375em;" class="content">For contributors we make it very easy for you to share your voice with the community. All you have to do is...</td>
           <td style="height: 100px; width: 85px;" class="outer_space"></td>
         </tr>
       </table>
@@ -142,15 +142,15 @@
       <table width="600px" height="100px" cellspacing="0" cellpadding="0" class="percent_width steps left_space">
         <tr>
           <td style="height: 30px; width: 100px;" class="outer_space"></td>
-          <td style="height: 30px; width: 500px; color: white; text-align: left; font-family: Verdana, Helvetica, sans-serif; font-size: 13px;" class="content">1 &nbsp;Sign a waiver giving us permission to display your blog/site</td>
+          <td style="height: 30px; width: 500px; color: white; text-align: left; font-family: Verdana, Helvetica, sans-serif; font-size: 0.8125em; padding: 10px 0;" class="content">1 &nbsp;Sign a waiver giving us permission to display your blog/site</td>
         </tr>
         <tr>
           <td style="height: 30px; width: 100px;" class="outer_space"></td>
-          <td style="height: 30px; width: 500px; color: white; text-align: left; font-family: Verdana, Helvetica, sans-serif; font-size: 13px;" class="content">2 &nbsp;We display your site on our platform for the community to see</td>
+          <td style="height: 30px; width: 500px; color: white; text-align: left; font-family: Verdana, Helvetica, sans-serif; font-size: 0.8125em; padding: 10px 0;" class="content">2 &nbsp;We display your site on our platform for the community to see</td>
         </tr>
         <tr>
           <td style="height: 30px; width: 100px;" class="outer_space"></td>
-          <td style="height: 30px; width: 500px; color: white; text-align: left; font-family: Verdana, Helvetica, sans-serif; font-size: 13px;" class="content">3 &nbsp;Users get to share, comment and like your story!</td>
+          <td style="height: 30px; width: 500px; color: white; text-align: left; font-family: Verdana, Helvetica, sans-serif; font-size: 0.8125em; padding: 10px 0;" class="content">3 &nbsp;Users get to share, comment and like your story!</td>
         </tr>
       </table>
     </td>
@@ -204,11 +204,11 @@ style="background-color:#473750;border-radius:20px;color:#ffffff;display:inline-
         </tr>
         <tr>
           <td style="height: 70px; width: 70px;" class="outer_space"></td>
-          <td style="height: 70px; width: 100px; color: #737373; text-align: center; font-family: Verdana, Helvetica, sans-serif; font-size: 13px;" class="third_content">Get access to more local readers</td>
+          <td style="height: 70px; width: 100px; color: #737373; text-align: center; font-family: Verdana, Helvetica, sans-serif; font-size: 0.8125em;" class="third_content">Get access to more local readers</td>
           <td style="height: 70px; width: 80px;" class="third_space"></td>
-          <td style="height: 70px; width: 100px; color: #737373; text-align: center; font-family: Verdana, Helvetica, sans-serif; font-size: 13px;" class="third_content">Build up your following locally</td>
+          <td style="height: 70px; width: 100px; color: #737373; text-align: center; font-family: Verdana, Helvetica, sans-serif; font-size: 0.8125em;" class="third_content">Build up your following locally</td>
           <td style="height: 70px; width: 80px;" class="third_space"></td>
-          <td style="height: 70px; width: 100px; color: #737373; text-align: center; font-family: Verdana, Helvetica, sans-serif; font-size: 13px;" class="third_content">You can write targeted articles</td>
+          <td style="height: 70px; width: 100px; color: #737373; text-align: center; font-family: Verdana, Helvetica, sans-serif; font-size: 0.8125em;" class="third_content">You can write targeted articles</td>
           <td style="height: 70px; width: 70px;" class="outer_space"></td>
         </tr>
       </table>
@@ -241,7 +241,7 @@ style="background-color:#473750;border-radius:20px;color:#ffffff;display:inline-
       <table width="600px" height="95px" cellspacing="0" cellpadding="0" style="background: #ffffff;" class="percent_width copyright">
         <tr>
           <td style="height: 95px; width: 50px;" class="outer_space"></td>
-          <td style="height: 95px; width: 500px; color: #737373; text-align: center; font-family: Verdana, Helvetica, sans-serif; font-size: 13px;" class="content">If you’re ready to get started with Locol or have more questions please feel free to reach out to us to schedule a free demo or have us answer your questions. Your voice is important to us and the community.</td>
+          <td style="height: 95px; width: 500px; color: #737373; text-align: center; font-family: Verdana, Helvetica, sans-serif; font-size: 0.8125em;" class="content">If you’re ready to get started with Locol or have more questions please feel free to reach out to us to schedule a free demo or have us answer your questions. Your voice is important to us and the community.</td>
           <td style="height: 95px; width: 50px;" class="outer_space"></td>
         </tr>
       </table>
